--- a/src/s2-homeworks/hw04/Stand.module.css
+++ b/src/s2-homeworks/hw04/Stand.module.css
@@ -1,13 +1,15 @@
 .stand {
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    align-items: flex-start;
 }
 
 .inputs {
     display: flex;
     flex-direction: column;
+    align-items: flex-start;
     gap: 48px;
+    margin-right: 132px;
 }
 
 .buttons {
