--- a/src/s2-homeworks/hw04/common/c1-SuperInputText/SuperInputText.module.css
+++ b/src/s2-homeworks/hw04/common/c1-SuperInputText/SuperInputText.module.css
@@ -1,20 +1,31 @@
 .input:focus {
+    border: 2px solid rgba(209, 209, 209, 1);
 }
 
 .input {
+    width: 372px;
+    height: 36px;
+    border: 1px solid rgba(209, 209, 209, 1);
+    border-radius: 5px;
+    outline: none;
 }
 
 .inputWrapper {
+
 }
 
 .superInput {
+    border: 1px solid rgba(209, 209, 209, 1);
 }
 
 .errorInput {
+    border: 1px solid red;
 }
 
 .errorInput:focus {
+    border: 2px solid red;
 }
 
 .error {
+    color: red;
 }
